--- a/index.html
+++ b/index.html
@@ -2,35 +2,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Psych Engine - Lua Script API</title>
+		<title>Krikoso Engine API</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/header.css">
-		<link rel="stylesheet" href="css/search.css">
 		<link rel="stylesheet" href="css/theme.css">
 		<link rel="icon" href="assets/icon.ico" type="image/x-icon">
 	</head>
 
 	<body>
-		<!-- Create Search Bar and Theme Boxes-->
-		<div class="sidebar"></div>
-		<div class="themeBox" onclick="switchTheme()">
-			<div class="themeDot"></div>
-			<div class="themeDot" style="margin-left: 70px"></div>
-			<button class="themeBtn" id="themeSelector"></button>
-		</div>
-
-		<!-- Load JavaScript-->
-		<script src="js/selector.js"></script>
-		<script>createSidebarContent('pages/');</script>
-		<script src="js/searchbar.js"></script>
-		<script src="js/theme.js"></script>
 
 		<!-- Header -->
 		<div class="headerbox">
 			<div class="header">
 				<a href="index.html">
 					<img width="64" src="assets/icon.ico" alt="Psych Engine Logo" draggable="false">
-					<div class="headertext">Psych Engine - Lua Script API</div>
+					<div class="headertext">Krikoso Engine - Extra Functions</div>
 				</a>
 			</div>
 		</div>
@@ -38,62 +24,20 @@
 		<!-- Page Info -->
 		<div class="infobox">
 			<h1>Home Page</h1>
-			<hr>
-			<p>This site is highly inspired by Flixel API's site, so huge props to them.</p>
-			<p>These pages are intended for Psych Engine 1.0+, so it might not be reliable for older versions.
-			<br>Support for other versions has been abandoned and will not be added to these pages.
-			</p>
-			<img width="400" src="assets/logo.png" alt="Psych Engine Logo" class="logoImage" draggable="false">
-			
-			<hr>
-			<h2>VS Code Extension</h2>
-			<p><a href="https://gamebanana.com/tools/10716">It's highly recommended for you to install it</a>, as it auto-completes function names.
-			</br>This is an unofficial tool though.</p>
-			<hr>
-			<h2>Running a script</h2>
-			<h3>There are 6 types of LUA Scripts you can run:</h3>
-
-			<ul class="methoddiv">
-				<li class="exampleitem"><b>Stage Script:</b> It will only run if the song's stage is loaded in the current chart, it should have the same name as your stage's .JSON file and should be inside <span class="methodexample">mods/My-Mod/stages/</span>.</li>
-				<li class="exampleitem"><b>Note Type Script:</b> It will only run if the named Note Type is being used in the current chart, it should be inside <span class="methodexample">mods/My-Mod/custom_notetypes/</span>.</li>
-				<li class="exampleitem"><b>Event Script:</b> It will only run if the said Event is being used on the chart, it should be located inside <span class="methodexample">mods/My-Mod/custom_events/</span>.</li>
-				<li class="exampleitem"><b>Song Script(s):</b> They should be saved inside the song's chart folder, it will only run in this specific song, no matter the Difficulty, Stage or anything else.</li>
-				<li class="exampleitem"><b>Character Script:</b> It will only be run if the specified character is used on the current Song. You can use variables <a href="pages/variables.html">dadName, boyfriendName and gfName</a> to check the current character used's name. (if dadName == 'pico' for example), should be in <span class="methodexample">mods/My-Mod/characters/</span>.</li>
-				<li class="exampleitem"><b>General Script:</b> It should be saved in <span class="methodexample">mods/My-Mod/scripts/</span>, it will always run in every Song as long as the Mod is loaded.</li>
-			</ul>
-			<hr>
-			<h2>Functions</h2>
-			<h3>There are 22 pages available with 212 functions:</h3>
-			<ul>
-				<li><a href="pages/playstate.html">PlayState Functions</a></li>
-				<li><a href="pages/reflection.html">Reflection Functions</a></li>
-				<li><a href="pages/spritesheet.html">Spritesheet Functions</a></li>
-				<li><a href="pages/flxanimate.html">FlxAnimate Functions</a></li>
-				<li><a href="pages/text.html">Text Functions</a></li>
-				<li><a href="pages/sound.html">Sound Functions</a></li>
-				<li><a href="pages/shaders.html">Shaders Functions</a></li>
-				<li><a href="pages/camera.html">Camera Functions</a></li>
-				<li><a href="pages/input.html">Input Functions</a></li>
-				<li><a href="pages/tween.html">Tween Functions</a></li>
-				<li><a href="pages/timer.html">Timer Functions</a></li>
-				<li><a href="pages/character.html">Character Functions</a></li>
-				<li><a href="pages/file.html">File I/O Functions</a></li>
-				<li><a href="pages/translations.html">Language/Translation Functions</a></li>
-				<li><a href="pages/achievements.html">Achievements Functions</a></li>
-				<li><a href="pages/substate.html">Substate Functions</a></li>
-				<li><a href="pages/precache.html">Precache Functions</a></li>
-				<li><a href="pages/score.html">Score Functions</a></li>
-				<li><a href="pages/savedata.html">Save Data Functions</a></li>
-				<li><a href="pages/script.html">Script Functions</a></li>
-				<li><a href="pages/discord.html">Discord Functions</a></li>
-				<li><a href="pages/uncategorized.html">Uncategorized Functions</a></li>
-			</ul>
-			<br><hr>
-			<h2>Other Pages</h2>
-			<ul>
-				<li><a href="pages/variables.html">List of all 106 Variables</a></li>
-				<li><a href="pages/snippets.html">Code Snippets</a></li>
-			</ul>
+		        <p>Hi, this is the Krikoso Engine API</p>
+			<h1>Variables</h1>
+			<h2>[BOOL] isKrikosoLua</h2>
+			<p>This variable is to check if the script is running on Krikoso Engine or Other engine</p>
+			<p>Example:</p>
+			<li class="exampleitem"><span class="methodexample">
+				function onStartCountdown()
+				    if isKrikosoLua == false then
+				        debugPrint('Sorry buddy, this script is for Krikoso Engine.')
+				        debugPrint('https://github.com/HogMedioScorched/FNF-KrikosoEngine/')
+	           		        return Function_Stop;
+				    end
+				end
+			</span>
 		</div>
 	</body>
 </html>
