--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 			</div>
 		</div>
 
+		<div>
+			<div>
+				<a href="index.html">
+				</a>
+			</div>
+		</div>
+		
 		<!-- Page Info -->
 		<div class="infobox">
 			<h1> </h1>
