--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/header.css">
 		<link rel="stylesheet" href="css/theme.css">
-		<link rel="icon" href="assets/icon.ico" type="image/x-icon">
+		<link rel="icon" href="assets/icon.png" type="image">
 	</head>
 
 	<body>
@@ -15,15 +15,8 @@
 		<div class="headerbox">
 			<div class="header">
 				<a href="index.html">
-					<img width="64" src="assets/icon.ico" alt="Psych Engine Logo" draggable="false">
-					<div class="headertext">Krikoso Engine - Extra Functions</div>
-				</a>
-			</div>
-		</div>
-
-		<div>
-			<div>
-				<a href="index.html">
+					<img width="64" src="assets/icon.png" alt="Krikoso Engine Logo" draggable="false">
+					<div class="headertext">Krikoso Engine API</div>
 				</a>
 			</div>
 		</div>
@@ -34,6 +27,7 @@
 			<h1> </h1>
 			<h1>Home Page</h1>
 		        <p>Hi, this is the Krikoso Engine API</p>
+			<img src="assets/logo.png" alt="Krikoso Engine Title Logo" draggable="false">
 			<h1>Variables</h1>
 			<h2>[BOOL] isKrikosoLua</h2>
 			<p>This variable is to check if the script is running on Krikoso Engine or Other engine</p>
