--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<h1> </h1>
 			<h1>Home Page</h1>
 		        <p>Hi, this is the Krikoso Engine API</p>
-			<img width=300 src="assets/logo.png" alt="Krikoso Engine Title Logo" draggable="false">
+			<img width="400" src="assets/logo.png" alt="Krikoso Engine Title Logo" draggable="false">
 			<h1>Variables</h1>
 			<h2>[BOOL] isKrikosoLua</h2>
 			<p>This variable is to check if the script is running on Krikoso Engine or Other engine</p>
