--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 
 	<body>
 
+
+		<!-- Create Search Bar and Theme Boxes-->
+		<div class="sidebar"></div>
+		<div class="themeBox" onclick="switchTheme()">
+			<div class="themeDot"></div>
+			<div class="themeDot" style="margin-left: 70px"></div>
+			<button class="themeBtn" id="themeSelector"></button>
+		</div>
+
+		<!-- Load JavaScript-->
+		<script src="js/selector.js"></script>
+		<script>createSidebarContent('pages/');</script>
+		<script src="js/searchbar.js"></script>
+		<script src="js/theme.js"></script>
+		
 		<!-- Header -->
 		<div class="headerbox">
 			<div class="header">
@@ -28,19 +43,6 @@
 			<h1>Home Page</h1>
 		        <p>Hi, this is the Krikoso Engine API</p>
 			<img width="350" src="assets/logo.png" alt="Krikoso Engine Title Logo" draggable="false">
-			<h1>Variables</h1>
-			<h2>[BOOL] isKrikosoLua</h2>
-			<p>This variable is to check if the script is running on Krikoso Engine or Other engine</p>
-			<p>Example:</p>
-			<li class="exampleitem"><span class="methodexample">
-				function onStartCountdown()
-				    if isKrikosoLua == false then
-				        debugPrint('Sorry buddy, this script is for Krikoso Engine.')
-				        debugPrint('https://github.com/HogMedioScorched/FNF-KrikosoEngine/')
-	           		        return Function_Stop;
-				    end
-				end
-			</span>
 		</div>
 	</body>
 </html>
